fix(center.css): Fix z-index of 'has-new-msg-alert-container'.   - z-index: 10;

--- a/client/app/center/center.css
+++ b/client/app/center/center.css
@@ -929,6 +929,7 @@ by ysyun 2015.2.25
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   padding-left: 14px;
+  z-index: 10;
 }
 
 .has-new-msg-alert-container:hover .has-new-msg-alert-container-text {
